# the-boss

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  app-upgrade-config.json  biome.jsonc  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.kbd-orchestrator/: current-waypoint.json  current-waypoint.md
config/: app-upgrade-segments.json
docs/: README.md  boss-v2.html
scripts/: after-pack.js  artifact-runtime-packages.js  (+17 more)
services/the-boss-control-plane/: Cargo.toml  Dockerfile  README.md  build.rs
services/the-boss-control-plane/admin-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
services/the-boss-control-plane/admin-ui/src/: main.tsx  style.css
services/the-boss-control-plane/migrations/: 202604190001_control_plane_config.sql
services/the-boss-control-plane/src/: config.rs  kratos.rs  lib.rs  main.rs  static_ui.rs
services/the-boss-control-plane/src/account/: mod.rs
services/the-boss-control-plane/src/admin/: mod.rs
services/the-boss-control-plane/src/analytics/: mod.rs
services/the-boss-control-plane/src/artifacts/: mod.rs
services/the-boss-control-plane/src/auth/: claims.rs  jwt.rs  mod.rs
services/the-boss-control-plane/src/catalog/: mod.rs
services/the-boss-control-plane/src/inference/: mod.rs
services/the-boss-control-plane/src/runtimes/: mod.rs
services/the-boss-control-plane/src/updates/: mod.rs
services/the-boss-control-plane/tests/: config_auth.rs  contracts.rs
(+723 files in other folders)
