[package]
name = "the-boss-control-plane"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false
build = "build.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
include_dir = "0.7"
jsonwebtoken = "9"
liter-llm = { git = "ssh://git@github.com/GQAdonis/liter-llm.git", package = "liter-llm", default-features = false, features = ["native-http", "tracing"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid", "migrate", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
